syntax = "proto3";

package spotify;

option go_package = "proto/";

service SpotifyService {
    rpc GetArtist(GetArtistRequest) returns (SpotifyArtist) {}
    rpc GetArtistsForUser(GetArtistsForUserRequest) returns (GetArtistsForUserResponse) {}
    rpc GetReleasesForArtist(GetReleasesRequest) returns (GetReleasesResponse) {}
}

message SpotifyArtist {
    string id = 1;
    string name = 2;
    repeated SpotifyImage images = 3;
    repeated string genres = 4;
}

message SpotifyRelease {
    string id = 1;
    string name = 2;
    repeated SpotifyImage images = 3;
    repeated string artist_ids = 4;
    string release_date = 5;
    repeated string genres = 6;
}

message SpotifyImage {
    string url = 1;
    int32 width = 2;
    int32 height = 3;
}

message GetArtistRequest {
    string id = 1;
}

message GetArtistsForUserRequest {
    string user_id = 1; // This is a fanfuse user id
}

message GetArtistsForUserResponse {
    repeated string artist_ids = 1; // These are spotify artist ids
}

message GetReleasesRequest {
    string artist_id = 1;
}

message GetReleasesResponse {
    repeated SpotifyRelease releases = 1;
}